# sqlc-python-demo

./: Makefile  README.md  alembic.ini  pyproject.toml  sqlc.yaml
migrations/: utils.py
migrations/versions/: 2023_07_15_2154_create_users_table.py
sqlc/: queries.sql  schema.sql
src/demo/: main.py
src/demo/db/users/: models.py  queries.py
