[project]
name = "demo"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
keywords = []
authors = [{ name = "Fredrik Averpil", email = "fredrik.averpil@gmail.com" }]
classifiers = [
  # https://pypi.org/classifiers/
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  # pip install sqlalchemy alembic psycopg2
  "alembic==1.11.1",
  "Mako==1.2.4",
  "MarkupSafe==2.1.3",
  "psycopg2==2.9.6",
  "SQLAlchemy==2.0.19",
  "typing_extensions==4.7.1",
  "pydantic==2.0.3",
  "pydantic_core==2.3.0",
  "annotated_types==0.5.0",
]
